tests/field/undefined_field.rev
struct Foo {}

var foo = Foo()
foo.bar // error: structure has no field 'bar'